--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "flatpickr": "^4.6.13",
     "form-data": "^4.0.1",
     "fs": "^0.0.1-security",
+    "sweetalert2": "^11.15.10",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
