--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "flatpickr": "^4.6.13",
     "form-data": "^4.0.1",
     "fs": "^0.0.1-security",
+    "imask": "^7.6.1",
     "sweetalert2": "^11.15.10",
+    "v-mask": "^2.3.0",
     "vue": "^3.5.12",
+    "vue-imask": "^7.6.1",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
